# controllers/hotel_order.go
@@ -16,7 +16,9 @@ type HotelOrderController interface {
 	GetHotelOrdersByAdmin(c echo.Context) error
 	GetHotelOrderDetailByAdmin(c echo.Context) error
 	GetHotelOrderByID(c echo.Context) error
+	GetHotelOrderByID2(c echo.Context) error
 	CreateHotelOrder(c echo.Context) error
+	CreateHotelOrder2(c echo.Context) error
 	UpdateHotelOrder(c echo.Context) error
 }
 
@@ -224,6 +226,62 @@ func (c *hotelOrderController) GetHotelOrderByID(ctx echo.Context) error {
 	)
 }
 
+func (c *hotelOrderController) GetHotelOrderByID2(ctx echo.Context) error {
+	tokenString := middlewares.GetTokenFromHeader(ctx.Request())
+	if tokenString == "" {
+		return ctx.JSON(
+			http.StatusUnauthorized,
+			helpers.NewErrorResponse(
+				http.StatusUnauthorized,
+				"No token provided",
+				helpers.GetErrorData(nil),
+			),
+		)
+	}
+
+	userId, err := middlewares.GetUserIdFromToken(tokenString)
+	if err != nil {
+		return ctx.JSON(
+			http.StatusUnauthorized,
+			helpers.NewErrorResponse(
+				http.StatusUnauthorized,
+				"No token provided",
+				helpers.GetErrorData(err),
+			),
+		)
+	}
+
+	hotelOrderIdParam := ctx.QueryParam("hotel_order_id")
+	hotelOrderId, _ := strconv.Atoi(hotelOrderIdParam)
+
+	isCheckInParam := ctx.QueryParam("update_check_in")
+	isCheckIn, _ := strconv.ParseBool(isCheckInParam)
+
+	isCheckOutParam := ctx.QueryParam("update_check_out")
+	isCheckOut, _ := strconv.ParseBool(isCheckOutParam)
+
+	hotelOrder, err := c.hotelOrderUsecase.GetHotelOrderByID2(userId, uint(hotelOrderId), isCheckIn, isCheckOut)
+	if err != nil {
+		return ctx.JSON(
+			http.StatusBadRequest,
+			helpers.NewErrorResponse(
+				http.StatusBadRequest,
+				"Failed to get a hotel order",
+				helpers.GetErrorData(err),
+			),
+		)
+	}
+
+	return ctx.JSON(
+		http.StatusOK,
+		helpers.NewResponse(
+			http.StatusOK,
+			"Successfully to get order hotels",
+			hotelOrder,
+		),
+	)
+}
+
 func (c *hotelOrderController) CreateHotelOrder(ctx echo.Context) error {
 	tokenString := middlewares.GetTokenFromHeader(ctx.Request())
 	if tokenString == "" {
@@ -262,6 +320,65 @@ func (c *hotelOrderController) CreateHotelOrder(ctx echo.Context) error {
 	}
 
 	hotelOrder, err := c.hotelOrderUsecase.CreateHotelOrder(userId, hotelOrderInput)
+	if err != nil {
+		return ctx.JSON(
+			http.StatusBadRequest,
+			helpers.NewErrorResponse(
+				http.StatusBadRequest,
+				"Failed to created a hotel order",
+				helpers.GetErrorData(err),
+			),
+		)
+	}
+
+	return ctx.JSON(
+		http.StatusCreated,
+		helpers.NewResponse(
+			http.StatusCreated,
+			"Successfully to created a hotel order",
+			hotelOrder,
+		),
+	)
+}
+
+func (c *hotelOrderController) CreateHotelOrder2(ctx echo.Context) error {
+	tokenString := middlewares.GetTokenFromHeader(ctx.Request())
+	if tokenString == "" {
+		return ctx.JSON(
+			http.StatusUnauthorized,
+			helpers.NewErrorResponse(
+				http.StatusUnauthorized,
+				"No token provided",
+				helpers.GetErrorData(nil),
+			),
+		)
+	}
+
+	userId, err := middlewares.GetUserIdFromToken(tokenString)
+	if err != nil {
+		return ctx.JSON(
+			http.StatusUnauthorized,
+			helpers.NewErrorResponse(
+				http.StatusUnauthorized,
+				"No token provided",
+				helpers.GetErrorData(err),
+			),
+		)
+	}
+
+	var hotelOrderInput dtos.HotelOrderMidtransInput
+	if err := ctx.Bind(&hotelOrderInput); err != nil {
+		return ctx.JSON(
+			http.StatusBadRequest,
+			helpers.NewErrorResponse(
+				http.StatusBadRequest,
+				"Failed binding hotel order",
+				helpers.GetErrorData(err),
+			),
+		)
+	}
+
+	hotelOrder, err := c.hotelOrderUsecase.CreateHotelOrder2(userId, hotelOrderInput)
 	if err != nil {
 		return ctx.JSON(
 			http.StatusBadRequest,
